sass/_sections.scss
/* ... */
.navbar.navbar-fixed-top.navbar-inverse {
    background-color: transparent;
    border: none;
    .page-scroll.active a{
      background-color: transparent;
    }
}

// navbar overrides
.navbar.navbar-fixed-top.navbar-inverse.navbar-shrink{
  background-color: $brand-primary;
  .page-scroll.active a{
    background-color: $white;
  }
}
.navbar-shrink, .navbar.navbar-fixed-top.framework {
  background-color: $brand-primary;
  .navbar-brand {
    opacity: initial;
  }
}
.navbar-inverse .navbar-nav>li>a {
  color: $white;
}

.tg-logo-inverse{
  display: none;
}

.navbar .divider-vertical {
  height: 30px;
  margin: 10px 5px;
  border-right: 1px solid $white;
}


section {
    padding: 100px 0;
    h2 {
      margin: 0;
      font-size: 3em;
    }
}

.section-heading {

  h1, h2, h3, h4, h5, h6 {
    color: $brand-primary;
    font-size: $largeHeading;
    text-transform: lowercase;
  }

  &.small {

    h1, h2, h3, h4, h5, h6 {
      color: $brand-primary;
      font-size: $mediumHeading;
    }
  }
}

section.success {
  background: $brightGray;
}

section#static {
    padding: 200px 100px 100px 100px;
}

section#portfolio {
  * {
    z-index: 2;
  }
}

section#about {
  padding-bottom: 0;

  .cubes {
    position: relative;
    top: 60px;
    border: 1px solid #eee;
  }
  .cube {
    background-color: white;
    height: 300px;
    padding: 0;
    overflow: hidden;
    text-align: center;
    .number {
      font-family: monospace;
      font-size: $massiveFont;
      font-weight: bold;
      color: $brand-primary;
      display: inline-block;
      line-height: 2em;
      margin-top: 50px;
      .large {
        font-size: 88px;
        line-height: 44px;
      }
    }
    img {
      height: 100%;
      width: auto;
    }
    .btn {
      margin-top: 20px;
    }
  }
}

section#team {
  padding-top: 160px;
}

section#cases {
    padding: 200px 0 100px 0;
    .cases-body {
        max-width: 820px;
        margin-top: 120px;
        margin-bottom: 60px;
        &.one-liner p {
            margin-bottom: 22px;
            font-size: $largeText;
        }
    }
    h3 {
      font-size: $smallHeading;
      margin: 30px 0 12px;
      color: $brand-primary;
    }

    p.intro {
      font-size: $smallText;
    }

    @media (max-width: 766px) {
        p.intro {
            max-width: 360px;
            margin: 0 auto 60px;
        }
    }

    .cases.row {
      margin-top: 60px;
    }
}

section#contact {
  background-color: $brightGray;
}

.blog-item {

  padding-top: 20px;
  padding-bottom: 20px;
  min-height: 246px;
  // overflow: hidden; //should be visible because of label
  margin-bottom: 30px;
  border: 1px solid #eee;
  padding: 15px;
  #blog-items & { // in blog article overview
    h3{
      margin: 10px 0 0 0;
    }
  }

  img {
    margin-bottom: 6px;
  }

  .previmg {
    position: relative;

    .infobar {
      background-color: rgba(0,0,0,.5);
      color: #fff !important;
      height: 30px;
      padding: 6px;
      position: absolute;
      bottom: 0;
      width: 100%;

      a, .tags, .tags .fa, h3 {
        color: #fff !important;

        &:hover {
          text-decoration: none;
        }
      }
    }
  }

  .tags {
    float: left;
    font-size: 11px;
    font-weight: normal;
    overflow: hidden;
    text-overflow: ellipsis;
    text-transform: uppercase;
    white-space: nowrap;
    width: 360px;
    @media (max-width: 600px) {
      width: 200px;
    }
    #post-content & {
      width: 200px;
    }
    .fa {
      font-size: 15px;
      color: $brand-primary;
      margin-right: 2px;
    }
  }

  .nerd {
    float: right;
    font-size: 0;
  }

  h3 {
    text-transform: none;
    font-size: 26px;
    font-weight: bold;
    margin: 0;
    padding: 6px 0;
  }

  p {
    margin: 12px 0;
  }

  .excerpt {
    min-height: 6em;

    #post-content & {
      display: none;
    }
  }
}
.label-blog-type{
    font-size: 12px;
    display: inline-block;
    top: -6px;
    line-height: 1;
    vertical-align: baseline;
    background-image: none;
    padding: .5833em .833em;
    text-transform: none;
    font-weight: 500;
    border: 0 solid transparent;
    border-radius: .28571429rem;
    -webkit-transition: background .1s ease;
    transition: background .1s ease;
    position: relative;
    margin: 0;
    margin-right: -1.2em;
    padding-left: 15px;
    padding-right: 1.2em;
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
    border-radius: 0 .28571429rem .28571429rem 0;
    left: -30px;
    color: #fff;


    &.label-technology{
      background-color: $brand-primary;
      border-color: darken($brand-primary, .95%);
    }
    &.label-business{
      background-color: $brand-primary;
      border-color: darken($brand-primary, .95%);
    }
    &:after{
      position: absolute;
      content: '';
      top: 100%;
      left: 0;
      background-color: transparent;
      border-style: solid;
      border-width: 0 1.2em 1.2em 0;
      border-color: transparent;
      border-right-color: inherit;
      width: 0;
      height: 0;
    }
}
/* ... */

